dist/k8s/prod/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker.pkg.github.com/wirvsvirus-gemeinsam-sport/gemeinsam-sport-frontend/frontend:0.0.61
        readinessProbe:
          httpGet:
            path: /js/app.js
            port: 8000
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred
