dist/k8s/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: frontend-ip
    networking.gke.io/managed-certificates: frontend-cert
spec:
  backend:
    serviceName: frontend-service
    servicePort: 80
